@@ -42,9 +42,6 @@ JHtml::_('behavior.formvalidation');
 				<li><?php echo $this->form->getLabel('alias'); ?>
 				<?php echo $this->form->getInput('alias'); ?></li>
 
-				<li><?php echo $this->form->getLabel('note'); ?>
-				<?php echo $this->form->getInput('note'); ?></li>
-
 				<li><?php echo $this->form->getLabel('extension'); ?>
 				<?php echo $this->form->getInput('extension'); ?></li>
 
@@ -56,9 +53,6 @@ JHtml::_('behavior.formvalidation');
 
 				<li><?php echo $this->form->getLabel('access'); ?>
 				<?php echo $this->form->getInput('access'); ?></li>
-
-				<li><?php echo $this->form->getLabel('language'); ?>
-				<?php echo $this->form->getInput('language'); ?></li>
 
 				<li><?php echo $this->form->getLabel('id'); ?>
 				<?php echo $this->form->getInput('id'); ?></li>
