@@ -24,5 +24,9 @@ foreach ($fieldSets as $name => $fieldSet) :
 			<?php echo $field->label; ?>
 			<?php echo $field->input; ?>
 		<?php endforeach; ?>
+		<?php echo $this->form->getLabel('note'); ?>
+		<?php echo $this->form->getInput('note'); ?>
+		<?php echo $this->form->getLabel('language'); ?>
+		<?php echo $this->form->getInput('language'); ?>		
 	</fieldset>
 <?php endforeach; ?>
