@@ -52,9 +52,6 @@ JHtml::_('behavior.formvalidation');
 		<li><?php echo $this->form->getLabel('access'); ?>
 		<?php echo $this->form->getInput('access'); ?></li>
 
-		<li><?php echo $this->form->getLabel('language'); ?>
-		<?php echo $this->form->getInput('language'); ?></li>
-
 		<li><?php echo $this->form->getLabel('featured'); ?>
 		<?php echo $this->form->getInput('featured'); ?></li>
 		
@@ -116,6 +113,8 @@ JHtml::_('behavior.formvalidation');
 					<li><?php echo $field->label; ?>
 					<?php echo $field->input; ?></li>
 				<?php endforeach; ?>
+					<li><?php echo $this->form->getLabel('language'); ?>
+					<?php echo $this->form->getInput('language'); ?></li>
 				</ul>
 			</fieldset>
 		<?php endforeach; ?>
