@@ -727,7 +727,7 @@ JLIB_FORM_VALUE_SESSION_NONE="None"
 JLIB_FORM_VALUE_SESSION_XCACHE="XCache"
 JLIB_FORM_VALUE_TIMEZONE_UTC="Universal Time, Coordinated (UTC)"
 JLIB_FORM_SELECT_USER="Select a User"
-JLIB_FORM_CHANGE_USER="Change User"
+JLIB_FORM_CHANGE_USER="Select User"
 JLIB_FORM_INVALID_FORM_RULE="Invalid Form Rule::%s"
 JLIB_FORM_INVALID_FORM_OBJECT="Invalid Form Object::%s"
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="Field required: %s"
