@@ -27,6 +27,11 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+13-Jun-2010 Ron Severdia
+^ Fixed select user button (Thanks Tim Plummer)
+# Reverting BlueStork error.php changes from previous commit. Will break until params bug is fixed.
+^ Relocate note & language fields to panel in Category & Article Manager (Thanks Tim Plummer)
+
 13-Jun-2010 Jean-Marie Simonet
 $ Normalizing Cpanel link in all admin error.php
 # Reverting part of new bluestork error.php [Revision 17643] as it breaks error display.
